[package]
name = "moq-live-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# JSON encoding
serde = "1"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
redis = { version = "0.23", features = [
    "tokio-rustls-comp",
    "connection-manager",
] }
url = { version = "2", features = ["serde"] }

# Error handling
log = "0.4"
env_logger = "0.9"
thiserror = "1"
anyhow = "1.0.79"
