[package]
name = "moq-live-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moq-transport = { path = "../moq-transport" }
moq-api = { path = "../moq-api" }


quinn = "0.10"
webtransport-quinn = "0.6.1"
#webtransport-quinn = { path = "../../webtransport-rs/webtransport-quinn" }

# Crypto
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
rustls-pemfile = "1"


tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# JSON encoding
serde = { version = "1", features = [] }
serde_json = "1"

# Database
redis = { version = "0.23", features = [
    "tokio-rustls-comp",
    "connection-manager",
] }
url = { version = "2", features = ["serde"] }

# Error handling
thiserror = "1"


# CLI, logging, error handling
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.9"
mp4 = "0.13"
anyhow = { version = "1", features = ["backtrace"] }
serde_derive = "1"
typetag = "0.2"
rfc6381-codec = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.31", features = [] }
inotify = "0.10.2"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
url = "2"
